# reverse_indexing

./: CMakeLists.txt  input.txt  main.cpp
